编辑器，图像上传同时截图。修改模板

--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/include/页头搜索栏.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/include/页头搜索栏.html
@@ -6,33 +6,14 @@
      </div>
       -->
     <div class="nav-search">
-      <form action="http://movie.douban.com/subject_search" method="get">
         <fieldset>
           <legend>搜索：</legend>
-          <label for="inp-query" style="display: none;">电影、影人、影院、电视剧</label>
-          <div class="inp"><input id="inp-query" name="search_text" size="22" maxlength="60" value="" placeholder="电影、影人、影院、电视剧" class="placeholder" autocomplete="off"></div>
+          <label for="inp-query" style="display: none;">电影</label>
+          <div class="inp"><input id="inp-query" name="search_text" size="22" maxlength="60" value="" placeholder="柯南爱电影" class="placeholder" autocomplete="off"></div>
           <div class="inp-btn"><input type="submit" value="搜索"></div>
           <input type="hidden" name="cat" value="1002">
         </fieldset>
-      </form>
     </div>
   </div>
-  </div>
-  <div class="nav-secondary">
-    
-  
-  <div class="nav-items nav-anon">
-      <ul>
-             
-                 <li><a href="${base}/movie/list_1.html">所有影片</a></li>
-             
-                 <li><a href="${base}/movie/tag.html">分类</a></li>
-             
-                 <li class="site-nav-bt"><a href="#">预告片</a></li>
-             
-      
-      </ul>
-  </div>
- 
   </div>
 </div>
