--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/include/页脚.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/include/页脚.html
@@ -3,8 +3,13 @@
 
 
 			<span id="icp" class="fleft gray-link"> © 2013－2014
-				xiaoliang.com, all rights reserved </span> <span class="fright"> <a
-				href="http://www.douban.com/about">关于畅</a> · <a
+				xiaoliang.com, all rights reserved </span> <span class="fright"> 
+				
+                <script type="text/javascript">
+                var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+                document.write(unescape("%3Cspan id='cnzz_stat_icon_1000162784'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1000162784%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));
+                </script>
+				<a href="http://www.douban.com/about">关于畅</a> · <a
 				href="http://www.douban.com/about?topic=contactus">联系我</a> · <a
 				href="http://movie.douban.com/help/">帮助中心</a>
 			</span>
